# SplashkitOnline

./: .gitignore  .gitmodules  Documenting Microsoft Edge Issues with Compiling Specific Demos.md  README.md  SKOservice-worker.js  executionEnvironment.html  how to use typescript in SK online.md  index.html  moduleEventTarget.js  package-lock.json  package.json  projectexport.md  research.md  server.js  setup.js  setup.py  temp.txt
.archive/: test.html
.archive/login-system/: Dockerfile  index.js  package-lock.json
.archive/login-system/public/: index.html  style.css
.github/workflows/: .trigger  build_static.yml  build_static_site.sh  build_static_site.yml  deploy_github_site.yml  download_github_site_previews.py  edit_release.py  generate_pr_map.py  release.py  static.yml
Browser_IDE/: Api.js  AppStorage.js  CodeEditor.js  HTMLBuilderUtil.js  IDBStorage.js  IDBStoredProject.js  IDEStartupMain.js  SKOservice-worker.js  actionQueue.js  app.js  clike.js  closebrackets.js  codeHinter.js  downloadHandler.js  editorMain.js  executionEnviromentClient.js  executionEnvironment.html  executionEnvironment.js  executionEnvironment_CodeProcessor.js  executionEnvironment_Internal.js  executionEnvironment_Page.js  executionEnvironment_Scope.js  fallibleMessage.js  fileview.js  fsevents.js  handleUserInput.js  index.html  languageDefinitions.js  loadsplashkit.js  modal.js  notifications.js  package-lock.json  package.json  projectInitializer.js  projectLoadUI.js  script.js  server.js  setup.js  setup.py  show-hint.js  (+8 more)
Browser_IDE/CSharpWasm/: main.js
Browser_IDE/Javascript/: themes.js
Browser_IDE/compilers/: compiler.js
Browser_IDE/compilers/csharp/: csharpCompiler.js
Browser_IDE/compilers/cxx/: cxxCompiler.js  cxxCompilerClangBackend.js  cxxCompilerClangWebWorker.js
Browser_IDE/compilers/javascript/: javascriptCompiler.js
Browser_IDE/css/: colours.css  executionEnviroment.css  index.css  shared.css
Browser_IDE/css/components/: codeMirror.css
Browser_IDE/css/layout/: executionEnviroment.css  index.css  shared.css
Browser_IDE/css/theming/: baseTheme.css  codeMirror.css  colours.css  general.css  modal.css
Browser_IDE/javascript/: executionEnviroment.js
Browser_IDE/javascript/UI/: treeview.js
Browser_IDE/javascript/languages/: languageDefinitions.js
Browser_IDE/javascript/layout/: executionEnviroment.js  layout.js
Browser_IDE/javascript/middleware/: actionQueue.js
Browser_IDE/runtimes/: ExecutionEnvironment.js  ExecutionEnvironmentInternal.js  ExecutionEnvironmentInternalLoader.js
Browser_IDE/runtimes/csharp/: csharpRuntime.js  main.js
Browser_IDE/runtimes/cxx/: cxxRuntime.js  workerEventProcessor.js
Browser_IDE/splashkit/: splashkit_autocomplete.json
Browser_IDE/test_unlink_rmdir/: testInitializer.js
CSharpWasm/: .gitignore  CSharpCodeRunner.cs  Program.cs  README.md  SplashKitBindings.Generated.cs  SplashKitInterop.cs  buildAndCopy.sh
CSharpWasm/BindingsGenerator/: .gitignore  BindingsGenerator.cs  BindingsGenerator.csproj  Program.cs
CSharpWasm/CSharpCodeRunner/: .gitignore  CSharpWasm.csproj
CSharpWasm/Properties/: launchSettings.json
CSharpWasmExpo/: splashKitMethods.generated.js
DemoProjects/metadata/: demos.json
Documentation/: index.mdx  overview.md
Documentation/Code Documentation/Classes/: execution-environment.md  idb-stored-project.md  tree-view.md
Documentation/Code Documentation/Other/: folder-structure-overview.md
Documentation/Code Documentation/Processes/: cpp-js-binding-generation-overview.md  how-splashkit-online-runs-code.md
Documentation/Research and Findings/: api-support-tests.md  splashkit-online-c-sharp-support-research.md  splashkit-online-research-outcome.md  splashkit-online-research-plan.md
JsonProcessor/: .gitignore  JsonParser.cs  Program.cs  SplashKit.Generated.cs
SplashKitWasm/cmake/: CMakeLists.txt
SplashKitWasm/src/cxxbackend/: cxx_preamble.cpp  cxx_preamble.js  patched_functions.cpp
SplashKitWasm/tools/: backend_binary_compressor.py  cxx_backend_emscripten_glue_patcher.py  cxx_backend_systemroot_builder.py  generateWebIDLBindings.py  generate_autocomplete_json.py  generate_javascript_bindings_and_glue.py  javascript_bindings_preamble.py  json_api_reader.py
SplashKitWasm/tools/js_binding_gen/: cpp_code_gen.py  documentation.md  glue_generation.py  javascript_bindings_preamble.py  js_code_gen.py  marshalling.py  marshalling_strategies.py  type_environment.py  (+1 more)
branch-previews/deployed/: executionEnvironment.html  index.html  package-lock.json
branch-previews/main/: editorMain.js
compilers/cxx/: cxxCompilerClangBackend.js  cxxCompilerClangWebWorker.js
css/components/: demoMenu.css
javascript/UI/: themes.js
javascript/executionEnviroment/: executionEnvironment.js  executionEnvironment_Page.js
javascript/intellisense/: splashkit-javascript-hint.js
javascript/languages/: languageDefinitions.js
javascript/startup/: projectLoadUI.js
javascript/storage/: unifiedfs.js
login-system/: auth.js  index.js  package.json
login-system/public/: index.html
pr-previews/100/: editorMain.js  index.html  modal.js  package-lock.json  splashkit-javascript-hint.js
pr-previews/102/: editorMain.js  package-lock.json  package.json  setup.py
pr-previews/103/: editorMain.js  package-lock.json
pr-previews/105/: downloadHandler.js  fileview.js
pr-previews/106/: IDEStartupMain.js  projectInitializer.js  server.js
pr-previews/109/: index.html  package-lock.json
pr-previews/110/: executionEnvironment_Internal.js  package-lock.json
pr-previews/112/: IDEStartupMain.js  package-lock.json  splashkit_autocomplete.json
pr-previews/113/: IDEStartupMain.js  index.html  projectLoadUI.js
pr-previews/91/: IDBStoredProject.js  package-lock.json  setup.js
pr-previews/95/: IDEStartupMain.js  editorMain.js  projectInitializer.js  projectLoadUI.js  splashKitOnlineEnvParams.js
pr-previews/96/: editorMain.js  index.html  package-lock.json
pr-previews/98/: IDEStartupMain.js  index.html  loadsplashkit.js
runtimes/: ExecutionEnvironmentInternalLoader.js
runtimes/csharp/: csharpRuntime.js
(+12 files in other folders)
